@@ -4,6 +4,10 @@ Release history for Devel-Symdump-Compact
  - isa-splain now accepts -M parameter to explicitly specify modules to load. This is helpful in handling cases where
    one module inlines others, ( B -> B::CV ) or a module can't be loaded on its own ( Class::MOP::Class )
 
+ [Bug #6]
+ - Poking MAX_WIDTH to a value smaller than 5 no longer triggers an infinite loop, instead, a minimum of one package
+   per line will be emitted, even if it exceeds MAX_WIDTH.
+
  [Dependencies::Stats]
  - Dependencies changed since 0.001001, see misc/*.deps* for details
  - develop: +1
